# novapay-ai-devop

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yml  AI_AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVSECOPS_STANDARDS.md  Dockerfile  ENGINEERING_STANDARDS.md  INTERVIEW_GUIDE.md  KUBERNETES_PLATFORM.md  LICENSE  Makefile  OBSERVABILITY.md  PROJECT_CONTEXT.md  README-Windows.md  README.md  ROADMAP.md  SECURITY.md  SYSTEM_ARCHITECTURE.md  TERRAFORM_STANDARDS.md  _parse_yamllint.py  ai_engine.py  pyproject.toml
dashboard/apps/api/: Dockerfile  api_log.txt  pyproject.toml  requirements.txt
dashboard/apps/api/src/: database.py  main.py  settings.py
dashboard/apps/api/src/ai_center/: router.py  schemas.py  utils.py
dashboard/apps/api/src/ai_center/providers/: __init__.py  azure_provider.py  gemini_provider.py  mock_provider.py  ollama_provider.py  openai_provider.py
dashboard/apps/api/src/ai_center/services/: assistant_service.py  conversation_service.py  health_service.py  insight_service.py  prompt_service.py  provider_service.py  recommendation_service.py  tool_service.py
dashboard/apps/api/src/dev_experience/: router.py  schemas.py
dashboard/apps/api/src/dev_experience/services/: ai_service.py  install_service.py  path_service.py  report_service.py  scan_service.py
dashboard/apps/api/src/docker_engine/: router.py  schemas.py
dashboard/apps/api/src/docker_engine/services/: container_service.py  docker_service.py  health_service.py  image_service.py  network_service.py  stats_service.py  volume_service.py
dashboard/apps/api/src/environment/: detector.py  health.py  router.py  schemas.py  validation.py
dashboard/apps/api/src/environment/detectors/: aws_detector.py  azure_detector.py  docker_compose_detector.py  docker_detector.py  gcloud_detector.py  gh_detector.py  git_detector.py  helm_detector.py  kind_detector.py  kubectl_detector.py  minikube_detector.py  node_detector.py  pnpm_detector.py  python_detector.py  system_detector.py  terraform_detector.py  wsl_detector.py
dashboard/apps/api/src/helm_center/: router.py  schemas.py  utils.py
dashboard/apps/api/src/helm_center/services/: health_service.py  helm_service.py
dashboard/apps/api/src/integrations/: base.py  models.py  router.py  schemas.py
dashboard/apps/api/src/integrations/providers/: __init__.py  aws_provider.py  azure_openai_provider.py  azure_provider.py  bitbucket_provider.py  claude_provider.py  discord_provider.py  docker_provider.py  gcloud_provider.py  gemini_provider.py  github_provider.py  gitlab_provider.py  grafana_provider.py  helm_provider.py  kubernetes_provider.py  loki_provider.py  ollama_provider.py  openai_provider.py  prometheus_provider.py  (+4 more)
dashboard/apps/api/src/k8s/: router.py  schemas.py
dashboard/apps/api/src/models/: __init__.py  github_credential.py  user.py
dashboard/apps/api/src/observability/: router.py  schemas.py  utils.py
dashboard/apps/api/src/routes/: __init__.py  ai.py  auth.py  docker.py  environment.py  github.py  helm.py  kubernetes.py  monitoring.py  security.py  system.py  terminal.py  terraform.py
dashboard/apps/api/src/security_center/: router.py  schemas.py  utils.py
dashboard/apps/api/src/terminal/: __init__.py  execution_layer.py  pty_manager.py
dashboard/apps/api/src/terraform_center/: router.py  schemas.py  utils.py
dashboard/apps/api/src/utils/: auth.py  encryption.py
lab/: Makefile  (+4 more)
(+627 files in other folders)
