[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisai-platform"
version = "0.1.0"
description = "AegisAI Enterprise Autonomous DevSecOps Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[tool.setuptools]
py-modules = ["ai_engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "ANN", # annotations
    "ASYNC", # flake8-async
    "S",   # bandit (security)
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",  # docstrings (optional)
    "ANN401",  # dynamic types
    "PLR0913",  # too many args
    "PLR2004",  # magic value comparisons
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "D", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
no_implicit_optional = true
show_error_codes = true
exclude = ["build/", "dist/", "aegisai_platform.egg-info/"]

[tool.pytest.ini_options]
minversion = "8.0"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-config",
    "--strict-markers",
    "-p no:cacheprovider",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "slow: Tests that take longer than 5 seconds",
    "security: Security-related tests",
]


[tool.coverage.run]
source = ["."]
omit = ["tests/*", "__pycache__/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "return NotImplemented",
]

[tool.coverage.html]
directory = "htmlcov"
